[FIX]: `Pricing Tags should be aligned`

--- a/assets/component-product-card.css
+++ b/assets/component-product-card.css
@@ -16,16 +16,22 @@
   font-size: 13px;
   font-weight: 400;
   letter-spacing: 1px;
+  min-height: 34px;
 }
 
 .card-heading a {
   text-decoration: none;
   color: rgb(var(--color-foreground));
+  display: -webkit-box;
+  line-clamp: 2;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 .product-card:hover .card-heading {
   text-decoration: underline;
-  text-underline-offset: 3px;
+  text-underline-offset: 2px;
 }
 
 .product-card-child {
@@ -102,6 +108,7 @@
 .card-pricing {
   margin-top: 10px;
   height: 100%;
+  min-height: 50px;
 }
 
 .card--standard .card-information {
